--- a/examples/example_config.json
+++ b/examples/example_config.json
@@ -6,6 +6,18 @@
             "-y",
             "github:divyesh-0x01/mcp-minimal"
          ]
-      }
+      },
+      "sse-server": {
+         "command": "/Library/Frameworks/Python.framework/Versions/3.11/bin/python3",
+         "args": [
+            "/Users/divyeshprajapati-ibm/Documents/dp/mcp/sse/server.py"
+         ],
+         "url": "http://localhost:8005/events",
+         "transport": "sse"
+      },
+      "everything": {
+      "command": "npx",
+      "args": ["-y", "@modelcontextprotocol/server-everything"]
+    }
    }
 }
