--- a/examples/example_config.json
+++ b/examples/example_config.json
@@ -1,19 +1,25 @@
 {
    "mcpServers": {
       "local-sse-server": {
-         "url": "http://localhost:9001/sse",
+         "url": "http://localhost:8080/sse",
          "transport": "sse",
          "description": "Local SSE Server",
          "timeout": 30,
-         "verify_ssl": false,
-         "headers": {
-            "Accept": "text/event-stream",
-            "Cache-Control": "no-cache",
-            "Connection": "keep-alive"
-         },
-         "auth": {
-            "method": "none"
-         }
+         "verify_ssl": false
+      },
+      "dvmcp": {
+         "url": "http://9.30.25.150:9001/sse",
+         "transport": "sse",
+         "description": "DVMCP Server",
+         "timeout": 10,
+         "verify_ssl": false
+      },
+      "tool-poison": {
+         "url": "http://9.30.25.150:9002/sse",
+         "transport": "sse",
+         "description": "Tool Poison Server",
+         "timeout": 10,
+         "verify_ssl": false
       },
       "stdio-server": {
          "command":"npx",
