--- a/examples/example_config.json
+++ b/examples/example_config.json
@@ -4,7 +4,7 @@
          "url": "http://localhost:8080/sse",
          "transport": "sse",
          "description": "Local SSE Server",
-         "timeout": 30,
+         "timeout": 10,
          "verify_ssl": false
       },
       "dvmcp": {
@@ -27,6 +27,14 @@
             "-y",
             "github:divyesh-0x01/mcp-minimal"
          ]
+      },
+      "filesystem": {
+      "command": "npx",
+      "args": [
+        "-y",
+        "@gabrielmaialva33/mcp-filesystem",
+        "/tmp"
+      ]
       }
    }
 }
